--- a/css/main.css
+++ b/css/main.css
@@ -157,3 +157,162 @@ hr {
 .active a{
     color: #ce0a00;
 }
+
+.services__body {
+    background-color: white;
+    width: 100%;
+    height: 730px;
+}
+
+.services__content {
+    padding: 130px 390px 95px 375px;
+}
+
+.services__title_w {
+    position: relative;
+    font-size: 150px;
+    color: rgba(238, 238, 238, 0.6);
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.services__title {
+    font-size: 50px;
+    color: #ce0a00;
+    position: absolute;
+    top: 30%;
+    left: 10px;
+}
+
+.services__cards {
+    height: 415px;
+    width: 100%;
+    padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items:flex-end;
+}
+
+.services__card {
+    width: 270px;
+    height: 360px;
+    margin-right: 30px;
+    margin-bottom: 14px;
+}
+
+.services__card img {
+    width: 100%;
+}
+
+.services__card h2 {
+    margin: 20px 0px;
+    font-size: 20px;
+    color: #ce0a00;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.services__card p {
+    font-size: 16px;
+    color: #cecece;
+    font-weight: 500;
+}
+
+
+.services__card .btn {
+    margin: 20px 0px;
+}
+
+.services__card .btn a {
+    margin: 50px 0px;
+    font-size: 16px;
+    font-weight: 800;
+    color:#545454;
+}
+
+.services__card .btn a i {
+    color: #ce0a00;
+}
+
+.services__form {
+    width: 270px;
+    height: 360px;
+    margin-right: 30px;
+    margin-bottom: 14px;
+    background-color: #ce0a00;
+    padding: 32px 20px
+}
+
+.services__form h2 {
+    font-weight: 700;
+    font-size: 20px;
+    color: #fff;
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.services__form h2:after {
+    content: ""; /* Добавляемый текст */ 
+    background-color: #fc0; /* Цвет фона */ 
+    padding: 2px; 
+    position: absolute;
+    bottom: -200%;
+    left: 0;
+    width: 35%;
+}
+
+.services__form p {
+    margin-top: 80px;
+    font-size: 16px;
+    font-weight: 500;
+    color: #fff;
+}
+
+
+.form__list {
+    margin-top: 40px;
+    height: 50px;
+    width: 100%;
+    background-color: #9d0000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.list__name {
+    width: 70%;
+    padding: 20px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.list__btn {
+    color: #ce0a00;
+    background-color: #ffcc00;
+    height: 100%;
+    width: 30%;
+    text-align: center;
+    position: relative;
+}
+
+.list__btn i {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+}
+
+.form__btn {
+    width: 150px;
+    margin-top: 20px;
+    border: 4px solid #ffcc00;
+    border-radius: 45px;
+    padding: 15px 25px;
+    background-color: #ffcc00;
+    box-shadow: 0 3px 10px 2px #ffcc006c;
+}
+
+.form__btn a {
+    color: #ce0a00;
+    font-weight: 600;
+}
