--- a/css/main.css
+++ b/css/main.css
@@ -316,3 +316,90 @@ hr {
     color: #ce0a00;
     font-weight: 600;
 }
+
+.about__body {
+    height: 920px;
+    width: 100%;
+    position: relative;
+}
+
+.about__hello {
+    height: 700px;
+    background: url('../img/about/about-bg.png');
+    width: 100%;
+}
+
+.hello__wrapper {
+    height: 100%;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 25%, #ffcc00a8 97%);
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.hello__wrapper h2 {
+    color: #fff;
+    font-size: 50px;
+    font-weight: 600;
+}
+
+.play__btn {
+    width: 70px;
+    height: 70px;
+    margin: 0px 50%;
+    margin-top: 60px;
+    background-color: #ffcc00;
+    position: relative;
+    border-radius: 45px;
+    box-shadow: 0 3px 10px 2px #ffcc006c;
+}
+
+.play__btn i {
+    position: absolute;
+    top: 30%;
+    left: 47%;
+    font-size: 25px;
+    color: #ce0a00;
+}
+
+.about__cards {
+    position: absolute;
+    top: 495px;
+    left: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about__card {
+    height: 410px;
+    max-width: 370px;
+    box-shadow: 0 4px 4px 5px rgba(0, 0, 0, 0.514);
+    margin: 0px 30px;
+}
+
+.about__card img {
+    width: 100%;
+    height: 50%;
+}
+
+.about__card h2 {
+    margin-top: 20px;
+    margin-left: 20px;
+    font-size: 20px;
+    color: #ce0a00;
+    font-weight: 800;
+}
+
+.about__card .point {
+    margin-left: 20px;
+    margin-top: 10px;
+    color: #8f8f8f;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.point i {
+    color: #ffcc00;
+    font-size: 16px;
+}
