--- a/css/main.css
+++ b/css/main.css
@@ -1,681 +1,353 @@
 body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    font-family: 'Poppins-Medium', Helvetica, Arial, sans-serif;
+    font-weight: normal;
 }
 
-.header__menu {
-    background-color: #ba0000;
-    width: 100%;
-    height: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+header {
+    height: 100vh;
 }
 
-.header__column {
-}
-
-.header__item {
-    padding: 6px;
-    display: inline-block;
-    margin-left: 15px;
-    margin-right: 15px;
-}
-
-.header__item a {
-    color: white;
-    font-size: 20px;
-    text-decoration: none;
-    font-weight: 400;
-}
-
-
-.main__menu {
-    width: 100%;
-    height: 120px;
-    background-color: #ffcc00;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.menu__logo {
-    margin-right: 100px;
-}
-
-.menu__logo img {
-    width: 150px;
-}
-
-.menu__items {
-    color: #ce0a00;
-    font-size: 16px;
-    margin: 0px 50px;
-}
-
-.menu__items ul li {
-    display: inline-block;
-    padding: 45px 20px;
-    font-weight: 600;
-}
-
-.menu__search {
-    border-radius: 100%;
-    background-color: #ce0a00;
-    padding: 14px;
-    box-shadow: 0 2px 5px 0 #ce0a00;
-}
-
-.menu__search i {
-    font-size: 20px;
-    color: white;
-}
-
-
-/*, linear-gradient(to bottom, rgb(255, 255, 255) 25%, #ce0a00 97%)*/
-.slider {
-    background: url('../img/dhl-bg-slider.png') center no-repeat;
-    background-size: cover;
-    height: 800px;
-    position: relative;
-}
-
-.slider__wrapper {
-    background: linear-gradient(-0.4turn, rgba(255, 255, 255, 0.0) 25%, #ce0a00 97%);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
+.grid__container {
+    margin: 0px 20vw;
     height: 100%;
 }
 
-.slider__body {
-    min-height: 500px;
-    min-width: 600px;
-    margin: 180px 370px 
+.navpanel {
+    width: 100%;
+    background-color: #ba0000;
+    height: 5vh;
+    color: #fff;
+}
+
+.nav__items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 100%;
+}
+
+.nav__item {
+    font-size: 18px;
+    padding: auto;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.nav__item a {
+    color: #fff;
+}
+
+.nav__item a i {
+    font-size: 15px;
+}
+
+.nav__item a:hover {
+    color: #ffcc00;
+    font-size: 19px;
+    transition: all 0.5s ease-out;
+}
+
+.nav__item div:not(:last-child) {
+    margin: 0 0.5em;
+}
+
+.main__menu {
+    height: 10vh;
+    background-color: #ffcc00;
+}
+
+.menu__items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+}
+
+.menu__item {
+    color: #ba0000;
+    font-size: 20px;
+}
+
+.logo img {
+    height: 10vh;
+}
+
+.logo img:hover {
+    height: 10.5vh;
+    transition: all 0.5s ease-out;
+}
+
+.menu__item ul li{
+    display: inline-block;
+    margin: 0 0.5em;
+}
+
+.menu__item ul li a {
+    color: #ba0000;
+}
+
+.menu__item ul li a:hover {
+    font-weight: 600;
+    border-bottom: 4px solid #ba0000;
+    padding-bottom: 3.5vh;
+}
+
+.search__btn {
+    padding: 2vh;
+    font-size: 18px;
+    color: #fff;
+    background-color: #ba0000;
+    border-radius: 45px;
+    box-shadow: 0 3px 10px 0px #ba0000;
+    cursor: pointer;
+}
+
+.search__btn:hover {
+    color:#ffcc00;
+    font-size: 20px;
+    transition: all 1s ease-out;
+}
+
+.slider {
+    height: 85vh;
+    width: 100%;
+    background: url('../img/dhl-bg-slider.png') no-repeat center;
+    background-size: cover;
+}
+
+.slider__cover {
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(-0.4turn, #ba000000, #ba0000);
+}
+
+.slider__content {
+    padding-top: 20vh;
 }
 
 .slider__title {
-    padding: 10px 0px;
-    color: white;
-    font-size: 70px;
-    font-weight: 800;
+    margin: 5vh 0;
+    position: relative;
 }
 
-hr {
-    border: 0;
-    color: #ffcc00;
+.slider__title h2 {
+    font-size: 80px;
+    font-weight: 700;
+    color: #fff;
+}
+
+.slider__title::after {
+    content: ' ';
     background-color: #ffcc00;
-    height: 4px;
-    width: 10%;
+    height: 3px;
+    width: 10em;
+    padding: 4px;
+    position: absolute;
+    bottom: -3vh;
+    left: 0;
 }
 
 .slider__description {
-    padding: 10px 0px;
-    font-size: 20px;
+    padding: 1vh 0;
     color: #ffcc00;
-    font-weight: 400;
+    font-size: 2vh;
+    font-weight: 500;
+    font-family: 'Poppins-Regular', sans-serif;
 }
 
 .slider__points {
-    margin-top: 5px;
+    margin-top: 2vh;
 }
 
 .slider__points ul li {
     display: inline-block;
-    color: white;
+    color: #fff;
     font-size: 20px;
-    font-weight: bold;
-    margin-right: 40px;
-}
-
-.slider__buttons {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    margin-top: 20px
-}
-
-.slider__btn {
-    margin-right: 45px;
-    border: 4px solid white;
-    border-radius: 45px;
-    padding: 15px 25px;
-}
-
-.slider__btn a {
-    color: white;
     font-weight: 700;
-    font-size: 14px;
+    margin-right: 4vw;
+    text-transform: uppercase;
+    position: relative;
 }
 
-.active {
-    border: 4px solid #ffcc00;
-    background-color: #ffcc00;
-    box-shadow: 0 0 10px 2px #ffcc00;
+.slider__points ul li:not(:last-child)::after {
+    content:'.';
+    color:#ffcc00;
+    font-size: 30px;
+    position: absolute;
+    bottom: 0.3vh;
+    right: -2.5vw;
 }
 
-.active a{
-    color: #ce0a00;
+.slider__btns {
+    padding: 2vh 0;
 }
 
-.services__body {
-    background-color: white;
+.slider__btns button {
+    background: none;
+    font-size: 16px;
+    color: #fff;
+    border: 4px solid #fff;
+    padding: 15px 25px;
+    margin-right: 2vw;
+    text-transform: uppercase;
+    border-radius: 45px;
+    font-weight: 600;
+}
+
+.slider__btns button:hover {
+    background: #ffcc00;
+    color: #ba0000;
+    border-color: #ffcc00;
+    box-shadow: 0 3px 5px 0 #ffcc00;
+    transition: all 0.5s ease-in-out;
+}
+
+/* Main block */
+
+.services {
     width: 100%;
-    height: 730px;
+    height: 70vh;
 }
 
 .services__content {
-    padding: 130px 390px 95px 375px;
-}
-
-.services__title_w {
-    position: relative;
-    font-size: 150px;
-    color: rgba(238, 238, 238, 0.6);
-    text-transform: uppercase;
-    font-weight: 700;
+    padding: 20vh 0;
 }
 
 .services__title {
+    color: #ba0000;
     font-size: 50px;
-    color: #ce0a00;
+    font-weight: 700;
+    position: relative;
+}
+
+.services__title::before {
+    content: 'Services';
+    text-transform: uppercase;
+    color: #eeeeee6e;
     position: absolute;
-    top: 30%;
-    left: 10px;
+    font-size: 150px;
+    bottom: -5vh;
+    left: 0;
+    z-index: -1;
 }
 
 .services__cards {
-    height: 415px;
-    width: 100%;
-    padding-top: 20px;
+    margin-top: 10vh;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    align-items:flex-end;
+    align-items: center;
 }
 
 .services__card {
-    width: 270px;
-    height: 360px;
-    margin-right: 30px;
-    margin-bottom: 14px;
+    width: 13vw;
+    height: 35vh;
+    min-width: 270px;
+    position: relative;
+    margin-bottom: 2vh;
 }
 
 .services__card img {
     width: 100%;
 }
 
-.services__card h2 {
-    margin: 20px 0px;
+.services__card h3 {
+    margin-top: 1vh;
     font-size: 20px;
-    color: #ce0a00;
+    color: #ba0000;
     font-weight: 700;
-    text-transform: uppercase;
 }
 
 .services__card p {
+    margin-top: 1vh;
     font-size: 16px;
-    color: #cecece;
-    font-weight: 500;
+    color: rgb(158, 158, 158);
+    font-weight: 600;
 }
 
-
-.services__card .btn {
-    margin: 20px 0px;
+.services__card button {
+    background: none;
+    margin-top: 1vh;
+    font-size: 18px;
+    font-weight: 700;
+    position:absolute;
+    left: 0;
+    bottom: 0;
 }
 
-.services__card .btn a {
-    margin: 50px 0px;
-    font-size: 16px;
-    font-weight: 800;
-    color:#545454;
-}
-
-.services__card .btn a i {
-    color: #ce0a00;
+.services__card button i {
+    color: #ba0000;
 }
 
 .services__form {
-    width: 270px;
-    height: 360px;
-    margin-right: 30px;
-    margin-bottom: 14px;
-    background-color: #ce0a00;
-    padding: 32px 20px
+    background: #ba0000;
+    width: 13vw;
+    height: 35vh;
+    padding: 30px;
+    min-width: 270px;
+    margin-bottom: 2vh;
 }
 
-.services__form h2 {
-    font-weight: 700;
-    font-size: 20px;
+.services__form h3 {
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: uppercase;
     color: #fff;
-    margin-bottom: 30px;
     position: relative;
 }
 
-.services__form h2:after {
-    content: ""; /* Добавляемый текст */ 
-    background-color: #fc0; /* Цвет фона */ 
-    padding: 2px; 
+.services__form h3:after {
+    content: ' ';
+    background: #ffcc00;
+    width: 4vw;
+    height: 3px;
     position: absolute;
-    bottom: -200%;
+    bottom: -3.5vh;
     left: 0;
-    width: 35%;
 }
 
 .services__form p {
-    margin-top: 80px;
-    font-size: 16px;
-    font-weight: 500;
+    margin-top: 6vh;
     color: #fff;
+    font-size: 16px;
 }
 
-
-.form__list {
-    margin-top: 40px;
-    height: 50px;
-    width: 100%;
-    background-color: #9d0000;
+.form__filter {
+    margin-top: 4vh;
+    /* padding: 5px; */
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    position: relative;
     align-items: center;
+    height: 40px;
+    background: #880101;
+    cursor: pointer;
 }
-
-.list__name {
-    width: 70%;
-    padding: 20px;
+.form__filter span {
+    margin: 8px;
     color: #fff;
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
 }
 
-.list__btn {
-    color: #ce0a00;
-    background-color: #ffcc00;
+.form__filter button {
     height: 100%;
-    width: 30%;
-    text-align: center;
-    position: relative;
-}
-
-.list__btn i {
-    position: absolute;
-    top: 40%;
-    left: 40%;
-}
-
-.form__btn {
-    width: 150px;
-    margin-top: 20px;
-    border: 4px solid #ffcc00;
-    border-radius: 45px;
-    padding: 15px 25px;
-    background-color: #ffcc00;
-    box-shadow: 0 3px 10px 2px #ffcc006c;
-}
-
-.form__btn a {
-    color: #ce0a00;
-    font-weight: 600;
-}
-
-.about__body {
-    height: 920px;
-    width: 100%;
-    position: relative;
-}
-
-.about__hello {
-    height: 700px;
-    background: url('../img/about/about-bg.png');
-    width: 100%;
-}
-
-.hello__wrapper {
-    height: 100%;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 25%, #ffcc00a8 97%);
-    width: 100%;
-    text-align: center;
-    padding-top: 100px;
-}
-
-.hello__wrapper h2 {
-    color: #fff;
-    font-size: 50px;
-    font-weight: 600;
-}
-
-.play__btn {
-    width: 70px;
-    height: 70px;
-    margin: 0px 50%;
-    margin-top: 60px;
-    background-color: #ffcc00;
-    position: relative;
-    border-radius: 45px;
-    box-shadow: 0 3px 10px 2px #ffcc006c;
-}
-
-.play__btn i {
-    position: absolute;
-    top: 30%;
-    left: 47%;
-    font-size: 25px;
-    color: #ce0a00;
-}
-
-.about__wrapper {
-    margin: 0px 370px;
-    width: 100%;
-}
-
-.about__cards {
-    position: absolute;
-    top: 495px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.about__card {
-    height: 410px;
-    min-width: 370px;
-    max-width: 380px;
-    box-shadow: 0px 8px 8px 0px rgba(0, 0, 0, 0.2);
-    margin-right: 30px;
-}
-
-.about__card img {
-    width: 100%;
-    height: 50%;
-}
-
-.about__card h2 {
-    margin-top: 20px;
-    margin-left: 20px;
-    font-size: 20px;
-    color: #ce0a00;
-    font-weight: 800;
-}
-
-.about__card .point {
-    margin-left: 20px;
-    margin-top: 10px; 
-    color: #8f8f8f;
-    font-size: 16px;
-    font-weight: 500;
-}
-
-.point i {
-    color: #ffcc00;
-    font-size: 16px;
-}
-
-
-.express_logistics__body {
-    min-height: 720px;
-    padding: 85px 370px 85px 370px;
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-
-.filter__form {
-    max-width: 570px;
-    width: 100%;
-    min-height: 530px;
-    background-color: #ba0000;
-}
-
-.filter__headers {
-    width: 100%;
-    height: 50px;
-    display: flex;
-    align-items: center;
-}
-
-.filter__headers div {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    text-transform: uppercase;
-    font-weight: 700;
-}
-
-.filter__express {
-    color: #fff;
-}
-
-
-.filter__logistics {
-    background-color: #ffcc00;
+    width: 2vw;
+    background: #ffcc00;
     color: #ba0000;
-    box-shadow: 0 3px 10px 2px #ffcc006c;
 }
 
-.filters__wrapper {
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-
-.filter__point {
-    border: 3px solid #fff;
-    color: #fff;
-    font-size: 14px;
-    font-weight: 500;
-    width: 100%;
-}
-
-
-.filter__point:not(:first-child) {
-    margin-top: 20px;
-}
-
-.filter__title {
-    display: flex;
-    justify-content: space-between;
-    text-transform: uppercase;
-}
-
-.filter__title div {
-    padding: 20px;
-}
-
-.filter__title div:last-child {
-    border-left: 3px solid #fff;
-}
-
-.opened {
-    border: none;
-    background-color: #ffcc00;
+.services__form >button {
+    margin-top: 5vh;
+    padding: 15px 45px;
+    background: #ffcc00;
     color: #ba0000;
     font-weight: 700;
-}
-
-.opened .filter__title div:last-child {
-    border-left: 3px solid #ba0000;
-}
-
-.filter__body {
-    background-color: #a30000;
-    border: 3px solid #ffcc00;
-    border-top: none;
-    color: #fff;
-    padding: 16px;
-}
-
-.filter__body h2 {
-    margin-top: 5px;
-    margin-bottom: 15px;
+    text-transform: uppercase;
     font-size: 14px;
-}
-
-.filter__body ul li {
-    margin: 5px 0px;
-    font-weight: normal;
-    font-size: 16px;
-}
-
-.filter__body ul li i {
-    color: #ffcc00;
-}
-
-.image__body {
-    margin-right: 30px;
-    height: 55vh;
-    position: relative;
-    min-width: 435px;
-    
-}
-
-.image {
-    width: 100%;
-    height: 97%;
-    background: linear-gradient(to bottom, #ffffff00 0%, #ffcc00 80%);;
-}
-
-.image img {
-    width: 35%;
-    position: absolute;
-    bottom: 5px;
-    left: 10px;
-}
-
-.image__wrapper {
-    position: absolute;
-    top: 35px;
-    left: 35px;
-    background: url('../img/filters/image-bg.png') no-repeat;
-    height: 100%;
-    width: 100%;
-}
-
-.image__border {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border: 20px solid #ffcc00;
-}
-
-
-.features__body {
-    height: 350px;
-    background-color: #ba0000;
-    color: #fff;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 370px;
-}
-
-.features__info {
-
-}
-
-.features__info h2 {
-    font-size: 30px;
-    font-weight: 700;
-    margin: 30px 0px;
-}
-
-.features__info p {
-    font-size: 16px;
-    font-weight: normal;
-}
-
-.features__button {
-    padding: 20px;
-    background-color: #a00000;
-    font-size: 14px;
-    font-weight: 700;
     border-radius: 45px;
-    text-align: center;
-    width: 200px;
-    text-transform: uppercase;
-}
-
-.clients__body {
-    height: 270px;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0px 370px;
-}
-
-.client {
-    background-color: #f9f9f9;
-    padding: 20px 10px;
-    border: 2px solid #e6e6e6;
-
-}
-
-.client img {
-    max-width: 250px;
-    min-width: 150px;
-}
-
-footer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 312px;
-    width: 100%;
-}
-
-.left_side_image {
-    border-left: 50px solid #ba0000;
-}
-
-.right_side_image {
-    border-right: 50px solid #ffcc00;
-}
-
-.footer__content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.footer__item {
-    padding: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-
-.footer__item h2 {
-    font-size: 20px;
-    font-weight: 600;
-    color: #ce0a00;
-    text-transform: uppercase;
-    margin-bottom: 30px;
-}
-
-.footer__item ul li {
-    color: #939393;
-    font-size: 14px;
-    font-weight: 700;
-    text-transform: uppercase;
-    margin-bottom: 10px;
-}
-
-.footer__item:not(:last-child) ul li:first-child {
-    color:#ffcc00;
-}
-
-.footer__item:last-child ul li:first-child {
-    color: #5bacea;
-}
-
-
-.footer__item ul li i{
-    color: #ce0a00;
 }
