--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,8 @@ header {
 
 .services {
     width: 100%;
-    height: 70vh;
+    min-height: 70vh;
+    margin-bottom: 0px;
 }
 
 .services__content {
@@ -350,4 +351,98 @@ header {
     text-transform: uppercase;
     font-size: 14px;
     border-radius: 45px;
+}
+
+.about {
+    height: 80vh;
+    width: 100%;
+    background: url('../img/about/about-bg.png') no-repeat;
+    background-size: cover;
+    position: relative;
+    /* padding: 20vh; */
+}
+
+.about__wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to bottom, #ffcc0000, #ffcc00);
+}
+
+.about__content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.about__title {
+    margin-top: 20vh;
+    text-align: center;
+    color: #fff;
+    font-size: 60px;
+    font-weight: 700;
+    margin-bottom: 5vh;
+}
+
+.about__button button {
+    padding: 0.3vh;
+    border-radius: 60px;
+    font-size: 18px;
+    width: 70px;
+    height: 70px;
+    background: #ffcc00;
+    box-shadow: 0 0 10px 2px #ffcc00;
+    color: #ba0000;
+}
+
+.about__button button:hover {
+    font-size: 20px;
+    background: #fac800;
+    transition: all 0.5s ease-out;
+}
+
+.about__cards-wrapper {
+    margin-top: 19.8vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.about__card {
+    width: 370px;
+    height: 380px;
+    background: #fff;
+    /* border: 1px solid #dfdfdf; */
+    box-shadow: 0px 4px 3px 0px rgba(0, 0, 0, 0.233);
+}
+.about__card img {
+    width: 370px;
+    max-height: 200px;
+}
+
+.card__content {
+    padding: 2em 1em;
+    /* margin-bottom: 20px; */
+}
+
+.card__content h3 {
+    color: #ba0000;
+    font-size: 18px;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.card__content i {
+    color: #ba0000;
+}
+
+.card__content ul li {
+    margin-bottom: 10px;
+    font-size: 16px;
+    font-weight: 600;
+    color: #888888;
 }
