--- a/css/main.css
+++ b/css/main.css
@@ -460,6 +460,7 @@ header {
 
 .client__wrapper {
     padding-top: 15vh;
+    padding-bottom: 8vh;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -492,10 +493,221 @@ header {
 .client_form_top-btns button.active {
     background-color: #ffcc00;
     color: #ba0000;
-    box-shadow: 0px 2px 4px 0px #ffcc00;
+    box-shadow: 0px 2px 12px 0px #ffcc00;
 }
 
 .client_form_content {
-    border: 1px solid #ffcc00;
+    /* border: 1px solid #ffcc00; */
     margin: 2em;
+}
+
+.client_form_content >div {
+    margin-top: 2em;
+}
+
+.client_form-menu_item {
+
+}
+
+.menu_item_title {
+    border: 0.2em solid #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu_item_title * {
+    padding: 0.7em;
+}
+
+.menu_item_title div {
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
+
+.menu_item_title button {
+    background: none;
+    border-left: 0.2em solid #fff;
+    color: #fff;
+}
+
+.menu_item_title.active {
+    border: none;
+    background: #ffcc00;
+}
+
+.menu_item_title.active button {
+    border-left: 0.2em solid #ba0000;
+    color:#ba0000;
+}
+
+
+.menu_item_content {
+    border: 0.2em solid #ffcc00;
+    border-top: none;
+    padding: 1.5em;
+    color: #fff;
+}
+
+.menu_item_content h3 {
+    font-weight: 700;
+    font-size: 16px;
+}
+
+.menu_item_content ul {
+    margin-top: 1em;
+}
+
+.menu_item_content ul li {
+    margin-top: 0.8em;
+    font-size: 15px;
+}
+
+.menu_item_content ul li i {
+    color: #ffcc00;
+}
+
+
+.client__image {
+    height: 100%;
+    min-height: 50vh;
+    /* border: 1px solid #ba0000; */
+    width: 25vw;
+    position: relative;
+}
+
+.client__image img {
+    width: 90%;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+.image-border {
+    border: 1.5em solid #ffcc00;
+    width: 90%;
+    height: 90%;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.features__body {
+    width: 100%;
+    height: 40vh;
+    background: #ba0000;
+}
+
+.features__body .grid__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.features__body .grid__container >div {
+    width: 40vw;
+    color: #fff;
+}
+
+.features__body .grid__container >div h2 {
+    margin-bottom: 2em;
+    font-size: 28px;
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
+.features__body .grid__container >div p {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.features__body .grid__container button {
+    padding: 1.5em 3em;
+    text-transform: uppercase;
+    font-size: 14px;
+    background:#a00000;
+    color: #fff;
+    font-weight: 700;
+    border-radius: 45px;
+}
+
+.clients__body {
+    width: 100%;
+    height: 30vh;
+}
+
+.clients__container {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.clients__wrapper {
+    background: #f9f9f9;
+    border: 1px solid #ececec;
+    padding: 2em 1em;
+}
+
+.clients__wrapper img {
+    max-width: 12vw;
+}
+
+footer {
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
+.footer_left {
+    border-left: 2vw solid #ba0000;
+}
+
+.footer__content {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    align-self: center;
+}
+
+.footer_item {
+    margin: 0 3vw;
+}
+
+.footer_item h3 {
+    color: #ba0000;
+    font-size: 20px;
+    font-weight: 700;
+    margin-bottom: 2vh;
+    text-transform: uppercase;
+}
+
+.footer_item ul li {
+    color: #a7a7a7;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 0.7em;
+}
+
+
+
+.footer_item ul li:first-child {
+    color:#fac800;
+}
+
+.footer_item:last-child ul li:first-child {
+    color: #8cc5f0;
+}
+
+
+.footer_item ul li i {
+    color: #ba0000;
+}
+
+.footer_right {
+    border-right: 2vw solid #ffcc00;
 }
