--- a/css/main.css
+++ b/css/main.css
@@ -469,7 +469,7 @@ header {
 
 .client__form {
     min-height: 50vh;
-    width: 25vw;
+    min-width: 25vw;
     background-color: #ba0000;
 }
 
@@ -574,7 +574,7 @@ header {
     height: 100%;
     min-height: 50vh;
     /* border: 1px solid #ba0000; */
-    width: 25vw;
+    min-width: 25vw;
     position: relative;
 }
 
@@ -634,6 +634,13 @@ header {
     border-radius: 45px;
 }
 
+.features__body .grid__container button:hover {
+    background: #ffcc00;
+    color: #ba0000;
+    box-shadow: 0 0 6px 0 #ffcc00;
+    transition: all 0.5s ease-out;
+}
+
 .clients__body {
     width: 100%;
     height: 30vh;
@@ -650,6 +657,11 @@ header {
     background: #f9f9f9;
     border: 1px solid #ececec;
     padding: 2em 1em;
+}
+
+.clients__wrapper:hover {
+    border: 1px solid #ba0000;
+    transition: all 0.5s ease-out;
 }
 
 .clients__wrapper img {
