--- a/css/main.css
+++ b/css/main.css
@@ -543,12 +543,16 @@ header {
     color:#ba0000;
 }
 
-
 .menu_item_content {
+    display: none;
     border: 0.2em solid #ffcc00;
     border-top: none;
     padding: 1.5em;
     color: #fff;
+}
+
+.menu_item_content.active {
+    display: block;
 }
 
 .menu_item_content h3 {
@@ -722,4 +726,84 @@ footer {
 
 .footer_right {
     border-right: 2vw solid #ffcc00;
+}
+
+/* Modal window */
+
+.modal__window__body {
+    display: none;
+}
+
+.modal__overlay {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #a000008a;
+    z-index: 90;
+    cursor: pointer;
+}
+
+.modal__content {
+    
+}
+
+.modal_content_body {
+    margin: 30vh 30vw;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 95;
+}
+
+.modal_form {
+    background: #fac800;
+    width: 40vw;
+    height: 40vh;
+    position: relative;
+    padding: 5vh 5vw;
+}
+
+.modal_exit_button {
+    background: none;
+    color: #ba0000;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 1em;
+}
+
+.modal_exit_button:hover {
+    font-size: 19px;
+    transition: all 0.5s ease-out;
+}
+
+.modal_logo {
+    width: 10em;
+    position: absolute;
+    top: -5px;
+    left: 0;
+    margin-left: 1em;
+}
+
+.modal__desc {
+    text-align: center;
+    margin-top: 25%;
+}
+
+.modal__desc h2 {
+    font-size: 25px;
+    font-weight: 600;
+    color: #ba0000;
+}
+
+.modal__desc h3 {
+    margin-top: 1em;
+    font-size: 20px;
+    font-weight: 500;
+    color: #8d0000;
 }
